# fos-parameterization

./: .gitignore  CMakeLists.txt  LICENSE  pyproject.toml
.github/workflows/: wheels.yml
ci/: build-wheel.sh
include/: fos_parameterization.h
python/: pyproject.toml
python/fos_parameterization/: __init__.py  _cdefs.py  _libloader.py  api.py
python/tests/: test_api.py
src/: fos_parameterization_c_api_mod.f08  fos_parameterization_mod.f08
tests/: c_api_smoke_test.cpp  fos_param_breakdown_test.f08  fos_param_core_test.f08  fos_param_derivative_test.f08  fos_param_error_test.f08  fos_param_helpers_test.f08  fos_param_neck_test.f08  fos_test_reference_mod.f08  golden_capture.f08  test_utils_mod.f08
