[build-system]
requires = ["scikit-build-core>=1.0", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "fos-parameterization"
description = "Python bindings for the Fourier-over-Spheroid (FoS) nuclear-shape parameterization library"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.scikit-build]
cmake.source-dir = "."
cmake.define.FOS_PARAM_BUILD_TESTS = "OFF"
# Default only (ambient CMAKE_GENERATOR still wins). Ninja + CMAKE_Fortran_PREPROCESS
# splits preprocess/compile, and the second pass trips fortran-foundations'
# -Wpedantic -Werror on Fortran's // concatenation ("C++ style comments" cpp note).
env.CMAKE_GENERATOR = "Unix Makefiles"
wheel.py-api = "py3"
wheel.packages = ["python/fos_parameterization"]
sdist.exclude = [".idea/", ".claude/", ".superpowers/", ".github/"]

# Version from git tags (setuptools_scm). Replaces the deprecated
# tool.scikit-build.metadata table (scikit-build-core >= 1.0).
[[tool.dynamic-metadata]]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
