[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fos-parameterization"
version = "1.2.0"
description = "Python bindings for the Fourier-over-Spheroid (FoS) nuclear-shape parameterization library"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fos_parameterization*"]
