[build-system]
requires = ["scikit-build-core>=0.10", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "fos-parameterization"
description = "Python bindings for the Fourier-over-Spheroid (FoS) nuclear-shape parameterization library"
requires-python = ">=3.9"
dependencies = ["numpy>=1.21"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.scikit-build]
cmake.source-dir = ".."
cmake.define.FOS_PARAM_BUILD_TESTS = "OFF"
wheel.py-api = "py3"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."
